# task

./: MCP.md  PlanningTool功能概述 (4).md  planning.md  ter.md
app/aios-app/: CMakeLists.txt  bos_aios_app.cpp  bos_aios_app.h  task_util.h
app/aios-app-manager/: CMakeLists.txt
app/aios-app-manager/demo/: CMakeLists.txt  demo_concurrent.cpp  demo_duplicate.cpp  demo_env.cpp  demo_mass_concurrent.cpp  demo_sigkill.cpp  demo_signal.cpp  demo_sleep.cpp  demo_stop.cpp
app/aios-app-manager/demo/environment-file/: environment-config
app/aios-app-manager/demo/include/: utils_env.hpp
app/aios-app-manager/demo/src/: demo_concurrent.cpp  demo_double_fork.cpp  demo_env.cpp  demo_fail.cpp  demo_mass_concurrent.cpp  demo_multi_thread.cpp  demo_signal.cpp  demo_sleep.cpp  demo_stop.cpp
app/aios-app-manager/include/: EnvManager.hpp  Laucher.hpp  LinuxAppInfor.hpp  LinuxAppProcessManager.hpp  ProcessInfo.hpp  ProcessMonitor.hpp  ProcessTypes.hpp  SignalHandler.hpp  collection.md  linux_app_process_manager.h
app/aios-app-manager/src/: LinuxAppProcessManager.cpp  SignalHandler.cpp  linux_app_process_manager.cpp
app/aios-app-manager/tests/: test_env_manager.cpp
mcp_prompt_cpp/: CMakeLists.txt  MCP-Prompt-SDK.md  MCP-protocol.md  download_third_party.sh  prompt.json
mcp_prompt_cpp/include/mcp/: McpClient.hpp
mcp_prompt_cpp/include/mcp/client/: McpClient.hpp  Types.hpp
mcp_prompt_cpp/include/mcp/client2/: JsonRpcClient.hpp  PromptClient.hpp  client.md
mcp_prompt_cpp/include/mcp/server/: Dispatcher.hpp  InitializeService.hpp
mcp_prompt_cpp/include/prompt/: IPromptBackend.hpp  MemoryBackend.hpp  MultiModalAssembler.hpp  PromptService.hpp  PromptStore.hpp  PromptTemplate.hpp  SqliteBackend.hpp  SqlitePromptStore.hpp  TemplateEngine.hpp  strore.md
mcp_prompt_cpp/include/protocol/: InitializeService.hpp  JsonRpc.hpp  McpCapabilities.hpp  McpCompletionRequests.hpp  McpContent.hpp  McpCoreRequests.hpp  McpJsonRpc.hpp  McpMisc.hpp  McpPromptRequests.hpp  McpResourceRequests.hpp  McpRootsAndLoggingRequests.hpp  McpSamplingBatch.hpp  McpToolRequests.hpp  compete.hpp  init.md  mcptools.hpp  resourcelist.hpp
mcp_prompt_cpp/include/resource/: ResourceManager.hpp  ResourceService.hpp  ResourceServiceModules.hpp
mcp_prompt_cpp/include/resource/resolvers/: HttpResolver.hpp  IResolver.hpp  LocalFileResolver.hpp
mcp_prompt_cpp/include/tools/: DemoTools.hpp  ToolRegistry.hpp  ToolService.hpp
mcp_prompt_cpp/include/transport/: AsioHttpTransportNoBoost.hpp  AsioHttpTransportWithRetry.hpp  AsioTcpTransport.hpp  AsioWsTransport.hpp  ITransport.hpp
mcp_prompt_cpp/src/: client_main.cpp  demo.cpp  server.cpp  server.md  server_main.cpp
mcp_prompt_cpp/src/client/: McpClient.cpp
mcp_prompt_cpp/src/client2/: JsonRpcClient.cpp
mcp_prompt_cpp/src/prompt/: MemoryBackend.cpp  MultiModalAssembler.cpp  PromptService.cpp  PromptStore.cpp  SqliteBackend.cpp  SqlitePromptStore.cpp
mcp_prompt_cpp/src/protocol/: InitializeService.cpp
mcp_prompt_cpp/src/resource/: ResourceManager.cpp  ResourceService.cpp
mcp_prompt_cpp/src/resource/resolvers/: HttpResolver.cpp  LocalFileResolver.cpp
mcp_prompt_cpp/src/server/: Dispatcher.cpp  InitializeService.cpp  server_main.cpp
mcp_prompt_cpp/src/tools/: DemoTools.cpp  ToolRegistry.cpp  ToolService.cpp
mcp_prompt_cpp/src/transport/: AsioTcpTransport.cpp  AsioWsTransport.cpp
road_mapping-develop/mapping/pointcloudconvert/: CMakeLists.txt  build.sh
road_mapping-develop/mapping/pointcloudconvert/src/: pointcloudconvert.cpp
road_mapping-develop/mapping/simple_mapper/: CMakeLists.txt
road_mapping-develop/mapping/simple_mapper/include/: json.h  log.h  sxf_cluster.h  types.h  util.h
road_mapping-develop/mapping/simple_mapper/src/: CMakeLists.txt  README.md  center_line_extract.cpp  center_line_extract2.cpp  cloud_to_image.cpp  flat_mapper.cpp  full_field_mapper.cpp  ground_thinner.cpp  simple_line_fit.cpp  simple_mapper.cpp  utm_frame_out.cpp
road_mapping-develop/preprocess/pointcloudrender/: CMakeLists.txt  README.md
road_mapping-develop/preprocess/pointcloudrender/include/: json.h  loam_feature.h  log.h  parse_seg.h  types.h  util.h
road_mapping-develop/preprocess/pointcloudrender/src/: bev_label_map.h  flat_scan_maker.cpp  scan_render.cpp
road_mapping-develop/road_model/bev_road_model/: .gitignore  CMakeLists.txt  build.sh  debug.sh  run.py  run.sh  run_offline.py
road_mapping-develop/road_model/bev_road_model/conf/: accuracy_update.ini  json_to_obj.ini  road_model.ini  road_model_local.bak.ini  road_model_local.ini  road_model_local_cxf.ini  road_model_local_debug.ini  road_model_online.ini
road_mapping-develop/road_model/mapbuilding/: CMakeLists.txt  Dockerfile  README.md  build.sh  build_3rd.sh
road_mapping-develop/road_model/mapbuilding/data/: detection.dbf  detection.shp  detection.shx
road_mapping-develop/road_model/mapbuilding/scripts/: unzip_mmt.py
road_mapping-develop/road_model/mapbuilding/src/: interpolation.cpp  interpolation.h  logUtil.cpp  logUtil.h  main.cpp  mapbuilding.cpp  mapbuilding.h  polygonenumerator.cpp  polygonenumerator.h
road_mapping-develop/road_model/semantic_road_model/Engine/: CMakeLists.txt
road_mapping-develop/road_model/semantic_road_model/roadMapping/: .gitignore  AfterProcessJunctionBoundary.cpp  AfterProcessJunctionBoundary.h  AfterProcessStopLine.cpp  AfterProcessStopLine.h  CMakeLists.txt  MathUtils.cpp  MathUtils.h  TinBuild.cpp  TinBuild.h  TriangleLib.cpp  TriangleLib.h  TriangleStruct.h  Utils.cpp  Utils.h  afterProcess.cpp  afterProcess.h  afterProcessCommon.cpp  afterProcessCommon.h  afterProcessLG.cpp  afterProcessLG.h  basicStruct.h  bindrelation.cpp  bindrelation.h  build.sh  cluster.cpp  cluster.h  clusterTest.cpp  combinePcdFiles.cpp  convexHull.cpp  convexHull.h  convexHullTest.cpp  earth.cpp  earth.hpp  joinKeyPoints.cpp  multipleLanesTest.cpp  (+52 more)
simple_msg/: CMakeLists.txt
simple_msg/src/: CMakeLists.txt  example.pb.cc  example.pb.h  gen_proto.sh  ipc_client.cpp  ipc_server.cpp  rpc_client.cpp  rpc_server.cpp
simple_msg/testing/: CMakeLists.txt  ibuffer_testcase.cpp
(+516 files in other folders)
